package Sem03;

interface cango {
    default void go(){
        System.out.println("не переопределенный методс, перемешаемся в пространстве");
    }
}
