package Sem03;

abstract public class mammal extends Animal{
    
    public mammal(String subtype, String name, int age){
        super("Млекопетащие", subtype, name, age);
    }
}
