package Sem03;

public class popug extends birds{

    public popug(String name, int age) {
        super("Попуг", name, age);
    }
}
